Some added ngrx store stuff and fixed weather alignment

--- a/SplashPage/src/app/components/weather/weather.component.scss
+++ b/SplashPage/src/app/components/weather/weather.component.scss
@@ -9,20 +9,20 @@ $transparent-background: rgba(245, 245, 245, 0);
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 20px 0px;
+  padding: 10px 0px;
   .iconContainer {
-    align-self: flex-end;
+    align-self: flex-start;
     #weatherIcon {
       color: $light-background;
       font-size: 96px;
-      margin-bottom: -10px;
+      padding-bottom: 10px;
       padding-right: 15px;
     }
   }
   .infoContainer {
     display: inline-flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     .tempContainer {
       display: inline-flex;
       flex-direction: row;
